[gd_scene load_steps=4 format=3 uid="uid://d2ygkjaw1ym7d"]

[ext_resource type="Texture2D" uid="uid://ckoygctcyj8vn" path="res://Scene asset/sink.png" id="1_hao8a"]
[ext_resource type="Script" path="res://sink.gd" id="1_vux7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f31l2"]
size = Vector2(128.5, 68)

[node name="sink" type="Area2D"]
script = ExtResource("1_vux7g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(72, 64)
scale = Vector2(1.88346, 1.70863)
texture = ExtResource("1_hao8a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(95.75, 58)
shape = SubResource("RectangleShape2D_f31l2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
